objects/Contact_Segment__c.object
<CustomObject>
    <description>Use to tag contacts (label, list)  by show/event</description>
    <fields>
        <fullName>Contact_Details_By_Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Details By Show</label>
        <referenceTo>Contact_Details_By_Show__c</referenceTo>
        <relationshipLabel>Contact Segments</relationshipLabel>
        <relationshipName>Contact_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Segments</relationshipLabel>
        <relationshipName>Contact_Segments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Contact Segments</relationshipLabel>
        <relationshipName>Contact_Segments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Show_Name__c</fullName>
        <formula>Segment__r.Show__r.Name</formula>
        <label>Show Name</label>
        <type>Text</type>
    </fields>
    <label>Contact Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contact Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>